--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,3 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run: make
+    - name: env
+      run: pip3 install -r requierements.txt
+    - name: test
+      run: make test
