--- a/libft/Makefile
+++ b/libft/Makefile
@@ -141,6 +141,7 @@ SRC += ft_tolower.c
 SRC += ft_toupper.c
 SRC += ft_getdelim.c
 SRC += ft_tablen.c
+SRC += ft_freetab.c
 
 SRC += ft_get_opts_args.c
 
